# Github-demo

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  conanfile.py  conanfile.txt  file.txt  libhal.tweaks.hpp  main.cpp
.github/workflows/: build.yml
app/: main.cpp
include/: resource_list.hpp
include/app/: resource_list.hpp
src/: main.cpp
